--- a/source-css/mlploungesteamgroup.css
+++ b/source-css/mlploungesteamgroup.css
@@ -930,6 +930,15 @@ a[href|="/roseluck3"] {
     background-position: -150px -350px;
     }
 
+a[href|="/uplestia"] {
+    display: block;
+    clear: none;
+    float: left;
+    width: 125px;
+    height: 98px;
+    background-image: url(%%emotesquare%%) !important;
+    background-position: -300px -350px;
+    }
 
 /* ------MACROS------- */
 a[href="/scumbagrando"] {
