--- a/source-css/mylittleandysonic1.css
+++ b/source-css/mylittleandysonic1.css
@@ -1434,6 +1434,16 @@ a[href|="/teenagespike"] {width:200px; height:233px; background-position: -1144p
 a[href|="/wooo"] {width:300px; height:200px; background-position: -839px -0px}
 a[href|="/youreunderarrest"] {width:200px; height:180px; background-position: -0px -255px}
 
+a[href|='/ravenraven'],a[href|='/sausagefest']{
+
+    display: block;
+    clear: none;
+    float: left;
+    background-image: url(%%emotesheetkk%%) }
+
+a[href|="/ravenraven"] {width:477px; height:389px; background-position: -0px -0px}
+a[href|="/sausagefest"] {width:260px; height:270px; background-position: -478px -0px}
+
 
 a[href|='/loligagging'],a[href|='/ponyjpeg']{
 
@@ -1508,5 +1518,3 @@ a.author[href$="Parasprite"] {color:#D19FE3!important}
     background-repeat: no-repeat;
     margin-bottom: -1px;
     }
-
-*/
