--- a/source-css/spanishmeerkat.css
+++ b/source-css/spanishmeerkat.css
@@ -909,9 +909,9 @@ a[href|="/appulbluh"] {width:171px;height:170px;background-position: -161px 0;}
 a[href|="/appuldurp"] {width:171px;height:170px;background-position: -332px 0;}
 a[href|="/autographfilly"] {width:189px;height:150px;background-position: -503px 0;}
 a[href|="/badpony"] {width:160px;height:150px;background-position: -692px 0;}
-a[href|="/caketwins"] {width:162px;height:170px;background-position: -849px 0;}
-a[href|="/chryssihuh"] {width:189px;height:200px;background-position: -1011px 0;}
-a[href|="/daringscared"] {width:192px;height:200px;background-position: -1200px 0;}
+a[href|="/caketwins"] {width:162px;height:170px;background-position: -852px 0;}
+a[href|="/chryssihuh"] {width:189px;height:200px;background-position: -1014px 0;}
+a[href|="/daringscared"] {width:192px;height:200px;background-position: -1203px 0;}
 a[href|="/fresh"] {width:378px;height:350px;background-position: 0 -300px;}
 a[href|="/grumpity"] {width:168px;height:150px;background-position: -378px -300px;}
 a[href|="/idreamofpinkie"] {width:175px;height:300px;background-position: -546px -300px;}
@@ -948,13 +948,17 @@ a[href|="/pinkieistiredofyourshit"] {width:150px;height:149px;background-positio
 
 /* Normal Spritesheet 3 */
 
-a[href|="/rainbowderp"], a[href|="/maudfun"], a[href|="/applegasm"], a[href|="/zecorawooo"]
+a[href|="/rainbowderp"], a[href|="/maudfun"], a[href|="/applegasm"], a[href|="/zecorawooo"], a[href|="/navydash"], a[href|="/navymeerkat"], a[href|="/surpriseddash"], a[href|="/rainbowyeah"], a[href|="/pinkietongue"], a[href|="/ionlywatchitfortheplot"]
 {background-image:url(%%normal-spritesheet3%%);display:block;float:left;}
 
 a[href|="/rainbowderp"] {width:131px;height:150px;}
 a[href|="/maudfun"] {width:230px;height:150px;background-position: -131px 0;}
 a[href|="/applegasm"] {width:185px;height:200px;background-position: 0 -150px;}
 a[href|="/zecorawooo"] {width:103px;height:200px;background-position: -185px -150px;}
+a[href|="/navydash"], a[href|="/navymeerkat"] {width:124px;height:200px;background-position: -288px -150px;}
+a[href|="/surpriseddash"], a[href|="/rainbowyeah"] {width:155px;height:200px;background-position: -412px -150px;}
+a[href|="/pinkietongue"] {width:116px;height:150px;background-position: -361px 0;}
+a[href|="/ionlywatchitfortheplot"] {width:126px;height:150px;background-position: -477px 0;}
 
 /* End of Normal Spritesheet 3 */
 
@@ -985,5 +989,7 @@ a[href|="/ajuberpout"] {width:121px;height:160px;background-position: -242px -16
 
 
 /* Single Emotes */
+
+
 
 /* End of Single Emotes */
