--- a/source-css/applefritter.css
+++ b/source-css/applefritter.css
@@ -278,8 +278,7 @@ a[href|="/sp"] {
 
 /*** Emotes ***/
 
-a[href|="/fritapple"], a[href|="/fritsmirk"], a[href|="/fritgrin"], a[href|="/fritbow"], a[href|="/frithmph"], a[href|="/fritnoway"], a[href|="/fritsad"], a[href|="/fritsmile"], a[href|="/frithappy"], a[href|="/fritwhat"], a[href|="/frityay"], a[href|="/fritter"], a[href|="/fritmad"], a[href|="/fritderp"], a[href|="/frithoof"], a[href|="/fritshrug"], a[href|="/fritsmeel"], a[href|="/fritbbbff"], a[href|="/fritlie"], a[href|="/fritspet"],
-a[href|="/fritbake"] {
+a[href|="/fritapple"], a[href|="/fritsmirk"], a[href|="/fritgrin"], a[href|="/fritshrug"], a[href|="/fritbow"], a[href|="/frithmph"], a[href|="/fritnoway"], a[href|="/fritsmeel"], a[href|="/fritsad"], a[href|="/fritsmile"], a[href|="/frithappy"], a[href|="/fritbbbff"], a[href|="/fritwhat"], a[href|="/frityay"], a[href|="/fritter"], a[href|="/fritlie"], a[href|="/fritmad"], a[href|="/fritderp"], a[href|="/frithoof"], a[href|="/fritspet"], a[href|="/fritbake"], a[href|="/fritblush"], a[href|="/fritjoke"] {
     display: block;
     clear: none;
     float: left;
@@ -288,8 +287,7 @@ a[href|="/fritbake"] {
     background-image: url(%%fritemotes%%) !important;
 }
 
-a[href|="/rfritapple"], a[href|="/rfritsmirk"], a[href|="/rfritgrin"], a[href|="/rfritbow"], a[href|="/rfrithmph"], a[href|="/rfritnoway"], a[href|="/rfritsad"], a[href|="/rfritsmile"], a[href|="/rfrithappy"], a[href|="/rfritwhat"], a[href|="/rfrityay"], a[href|="/rfritter"], a[href|="/rfritmad"], a[href|="/rfritderp"], a[href|="/rfrithoof"], a[href|="/rfritshrug"], a[href|="/rfritsmeel"], a[href|="/rfritbbbff"], a[href|="/rfritlie"], a[href|="/rfritspet"],
-a[href|="/rfritbake"] {
+a[href|="/rfritapple"], a[href|="/rfritsmirk"], a[href|="/rfritgrin"], a[href|="/rfritshrug"], a[href|="/rfritbow"], a[href|="/rfrithmph"], a[href|="/rfritnoway"], a[href|="/rfritsmeel"], a[href|="/rfritsad"], a[href|="/rfritsmile"], a[href|="/rfrithappy"], a[href|="/rfritbbbff"], a[href|="/rfritwhat"], a[href|="/rfrityay"], a[href|="/rfritter"], a[href|="/rfritlie"], a[href|="/rfritmad"], a[href|="/rfritderp"], a[href|="/rfrithoof"], a[href|="/rfritspet"], a[href|="/rfritbake"], a[href|="/rfritblush"], a[href|="/rfritjoke"] {
     display: block;
     clear: none;
     float: left;
@@ -303,29 +301,31 @@ a[href|="/rfritbake"] {
     transform: scaleX(-1);
 }
 
-a[href|="/fritapple"], a[href|="/rfritapple"] { background-position:-0px -0px; }
-a[href|="/fritsmirk"], a[href|="/rfritsmirk"] { background-position:-70px -0px; }
-a[href|="/fritgrin"], a[href|="/rfritgrin"] { background-position:-140px -0px; }
+a[href|="/fritapple"], a[href|="/rfritapple"] { background-position: -0px -0px; }
+a[href|="/fritsmirk"], a[href|="/rfritsmirk"] { background-position: -70px -0px; }
+a[href|="/fritgrin"], a[href|="/rfritgrin"] { background-position: -140px -0px; }
 a[href|="/fritshrug"], a[href|="/rfritshrug"] { background-position: -210px -0px; }
-a[href|="/fritbow"], a[href|="/rfritbow"] { background-position:-0px -70px; }
-a[href|="/frithmph"], a[href|="/rfrithmph"] { background-position:-70px -70px; }
-a[href|="/fritnoway"], a[href|="/rfritnoway"] { background-position:-140px -70px; }
+a[href|="/fritbow"], a[href|="/rfritbow"] { background-position: -0px -70px; }
+a[href|="/frithmph"], a[href|="/rfrithmph"] { background-position: -70px -70px; }
+a[href|="/fritnoway"], a[href|="/rfritnoway"] { background-position: -140px -70px; }
 a[href|="/fritsmeel"], a[href|="/rfritsmeel"] { background-position: -210px -70px; }
-a[href|="/fritsad"], a[href|="/rfritsad"] { background-position:-0px -140px; }
-a[href|="/fritsmile"], a[href|="/rfritsmile"] { background-position:-70px -140px; }
-a[href|="/frithappy"], a[href|="/rfrithappy"] { background-position:-140px -140px; }
+a[href|="/fritsad"], a[href|="/rfritsad"] { background-position: -0px -140px; }
+a[href|="/fritsmile"], a[href|="/rfritsmile"] { background-position: -70px -140px; }
+a[href|="/frithappy"], a[href|="/rfrithappy"] { background-position: -140px -140px; }
 a[href|="/fritbbbff"], a[href|="/rfritbbbff"] { background-position: -210px -140px; }
-a[href|="/fritwhat"], a[href|="/rfritwhat"] { background-position:-0px -210px; }
-a[href|="/frityay"], a[href|="/rfrityay"] { background-position:-70px -210px; }
-a[href|="/fritter"], a[href|="/rfritter"] { background-position:-140px -210px; }
+a[href|="/fritwhat"], a[href|="/rfritwhat"] { background-position: -0px -210px; }
+a[href|="/frityay"], a[href|="/rfrityay"] { background-position: -70px -210px; }
+a[href|="/fritter"], a[href|="/rfritter"] { background-position: -140px -210px; }
 a[href|="/fritlie"], a[href|="/rfritlie"] { background-position: -210px -210px; }
 a[href|="/fritmad"], a[href|="/rfritmad"] { background-position: -0px -280px; }
 a[href|="/fritderp"], a[href|="/rfritderp"] { background-position: -70px -280px; }
 a[href|="/frithoof"], a[href|="/rfrithoof"] { background-position: -140px -280px; }
 a[href|="/fritspet"], a[href|="/rfritspet"] { background-position: -210px -280px; }
 a[href|="/fritbake"], a[href|="/rfritbake"] { background-position: -0px -350px; }
+a[href|="/fritblush"], a[href|="/rfritblush"] { background-position: -70px -350px; }
+a[href|="/fritjoke"], a[href|="/rfritjoke"] { background-position: -140px -350px; }
 
-a[href|="/fritnya"] {
+a[href|="/fritnya"], a[href|="/fritteehee"] {
     display: block;
     clear: none;
     float: left;
@@ -334,7 +334,7 @@ a[href|="/fritnya"] {
     background-image: url(%%fritemotes100%%) !important;
 }
 
-a[href|="/rfritnya"] {
+a[href|="/rfritnya"], a[href|="/rfritteehee"] {
     display: block;
     clear: none;
     float: left;
@@ -348,7 +348,8 @@ a[href|="/rfritnya"] {
     transform: scaleX(-1);
 }
 
-a[href|="/fritnya"], a[href|="/rfritnya"] { background-position:-0px -0px; }
+a[href|="/fritnya"], a[href|="/rfritnya"] { background-position: -0px -0px; }
+a[href|="/fritteehee"], a[href|="/rfritteehee"] { background-position: -100px -0px; }
 
 a[href|="/fritsitting"], a[href|="/rfritsitting"] {
     display: block;
