--- a/source-css/ploungeafterdark.css
+++ b/source-css/ploungeafterdark.css
@@ -1,7 +1,7 @@
 /* ==Edurne Reddit CSS Theme v5.6 - (http://www.reddit.com/r/edurne/)== */
 
 /* GENERAL */
-body { position:relative; font-family:arial, helvetica, sans-serif; }
+/*body { position:relative; font-family:arial, helvetica, sans-serif; }*/
 body > .content { overflow:hidden; }
 /*.md p { font-family:Verdana, arial, sans-serif; padding:1px 0; }*/
 
@@ -24,21 +24,18 @@ body > .content { overflow:hidden; }
     font-family:Verdana, arial, sans-serif;
 }
 
-#sr-header-area a { color:#54708b; }
+#sr-header-area a { color:000; }
 body.res-nightmode #header { border-color: #DDF; }
-body.res-nightmode #header .tabmenu li:not(.selected) a { color: #346; }
+body.res-nightmode #header .tabmenu li:not(.selected) a { color: #D19FE3; }
 #header .tabmenu li.selected a { border: 0; border-bottom: 1px solid #FFF; }
-#header .tabmenu li:not(.selected):hover a { background-color: #449EF8; color: #FFF; }
+#header .tabmenu li:not(.selected):hover a { background-color: #D19FE3; color: #FFF; }
 body.res-nightmode #header .tabmenu li { background-color: #DDD !important; }
 body.res-nightmode #header .tabmenu li:not(.selected):hover a { background-color: #CCC; color: #444; }
-#header-img { margin:173px 20px 0; }
-.pagename { margin-right:25px; font-weight:bold; font-variant:normal; font-size:18px; }
-body.res-nightmode .pagename a { font-size: 18px !important; }
 #sr-header-area .dropdown.srdrop, #sr-header-area#srLeftContainer { padding-left:21px; }
 #sr-more-link, #header #sr-header-area #RESShortcutsEditContainer, #header #sr-header-area #RESShortcutsRight, #header #sr-header-area #RESShortcutsLeft,
-#header #sr-header-area #RESShortcutsAdd, #header #sr-header-area #RESShortcutsTrash { background-color:#c6daed; }
-body.res-nightmode #sr-header-area, body.res-nightmode #sr-more-link { background-color: #c6daed !important; }
-#sr-header-area #RESShortcutsEditContainer, #sr-more-link { border-right:20px solid #c6daed; font-weight:bolder; }
+#header #sr-header-area #RESShortcutsAdd, #header #sr-header-area #RESShortcutsTrash { color:#000; background-color:#c6daed; }
+body.res-nightmode #sr-header-area, body.res-nightmode #sr-more-link { background-color: #D19FE3 !important; }
+#sr-header-area #RESShortcutsEditContainer, #sr-more-link { color:#000; border-right:20px solid #c6daed; font-weight:bolder; }
 
 #header-bottom-right {
     right:20px;
@@ -79,10 +76,10 @@ body.res-nightmode #header-bottom-right { background-color: #DEEAF6 !important; 
 
 /* search */
 .side #search {
-    border:1px solid #eaeaea;
+    border:1px solid #F2E6F7;
     padding:10px;
     margin-top:20px;
-    background-color:#FAFAFA;
+    background-color:#F2E6F7;
 }
 body.res-nightmode #search {
     background-color: #AAA;
@@ -90,7 +87,7 @@ body.res-nightmode #search {
 }
 #search input[type=text] {
     width:265px;
-    border:1px solid #DBDADA;
+    border:1px solid #F2E6F7;
     -moz-border-radius:2px;
     -webkit-border-radius:2px;
     -o-border-radius:2px;
@@ -103,16 +100,16 @@ body.res-nightmode #search {
 }
 
 /* side */
-.side { margin: 0 20px; }
+.side { margin: 0 20px; background-color: #F2E6F7 }
 .side .md { overflow:hidden; }
-.titlebox { padding:0 10px; }
-.titlebox .bottom { display:none; }
-.side .titlebox > h1 { font-size: 20px; letter-spacing: -1px;}
-.linkinfo { padding:15px; border:none; background-color:#CEE3F8; }
+.titlebox { padding:0 10px; background-color:#F2E6F7; }
+.titlebox .bottom { display:none; background-color:#F2E6F7; }
+.side .titlebox > h1 { font-size: 20px; letter-spacing: -1px; background-color:#F2E6F7; }
+.linkinfo { padding:15px; border:none; background-color:#F2E6F7; }
 body.res-nightmode .side .redditname a { color: #DDD !important; }
-.sidebox.submit .spacer, .sidebox.create { display:none; }
+.sidebox.submit .spacer, .sidebox.create { display:none; background-color: #F2E6F7 }
 .linkinfo .score .word,.linkinfo .score .number { font-size:15px; }
-.sidecontentbox .content { border:1px solid #EAEAEA; background-color:#FAFAFA; padding:10px; }
+.sidecontentbox .content { border:1px solid #F2E6F7; background-color:#F2E6F7; padding:10px; }
 .icon-menu li { margin:0 0 5px; }
 .side h1, .side h2, .side h3 {color: #222;}
 .side h1 {font-size: 19px;}
@@ -120,7 +117,7 @@ body.res-nightmode .side .redditname a { color: #DDD !important; }
 .side h3 {font-size: 14px;}
 
 body.res-nightmode .login-form-side {
-    background-color: #111 !important;
+    background-color: #EDD2FA !important;
     color: #DDD !important;
     border: 1px solid #DDD !important;
 }
@@ -155,7 +152,7 @@ body.res-nightmode .sidebox.submit:hover .nub { border-left-color: #444; }
 .morelink,.morelink:hover,.side a[href*='/#btn'] {
     font-weight:normal;
     letter-spacing:0;
-    background:#77D3F2;
+    background:#DBA3F7;
     border: none;
     -moz-border-radius:2px;
     -webkit-border-radius:2px;
@@ -175,7 +172,7 @@ body.res-nightmode .sidebox.submit:hover .nub { border-left-color: #444; }
     height: 0;
     width: 0;
     background: white;
-    border: 24px solid #77D3F2;
+    border: 24px solid #DBA3F7;
     border-top-width: 15px;
     border-top-color: transparent;
     border-bottom-width: 15px;
@@ -183,9 +180,9 @@ body.res-nightmode .sidebox.submit:hover .nub { border-left-color: #444; }
     border-right-color: transparent;
 }
 
-.morelink:hover .nub { border-left-color: #6DCDED }
+.morelink:hover .nub { border-left-color: #D19FE3 }
 .disabled .morelink a,.disabled .morelink a:hover { cursor:default; color:#AAA; }
-.morelink:hover { background: linear-gradient(to left, purple,cyan,green,yellow,orange,red); border-color:#6DCDED; }
+.morelink:hover { background: linear-gradient(to left, #263773,#ED438A,#662D8A); border-color:#D19FE3; }
 .disabled .morelink,.disabled .morelink:hover { background:#f5f5f5; border-color:#f5f5f5; }
 .disabled .morelink .nub,.disabled .morelink:hover .nub { background:url 0 0 no-repeat transparent; border-color:#f5f5f5; }
 
@@ -201,7 +198,7 @@ body.res-nightmode .sidebox.submit:hover .nub { border-left-color: #444; }
     margin:0px;
     padding:5px;
     border:1px solid #EAEAEA;
-    background-color:#FAFAFA;
+    background-color:#B689C8;
     max-width: 100%;
 }
 body.res-nightmode .sitetable .thing.link, body.res-nightmode div#siteTable div[onclick="click_thing(this)"] {
@@ -229,8 +226,8 @@ body.res-nightmode .link.last-clicked { border-color: #666; }
 .commentarea { margin-top:10px; }
 .link.self .usertext-body .md p,.comment .usertext-body .md p { line-height:1.3em; }
 .link .usertext .md { padding:5px 10px; }
-.panestack-title { border:none; margin:0; padding:0; }
-.panestack-title .title { float:left; font-size:11px; color:#888; margin:0; }
+.panestack-title { border:none; margin:0; padding:0;}
+.panestack-title .title { float:left; font-size:11px; color:#000; margin:0; }
 .commentarea .menuarea { font-size:11px; margin:0; }
 .panestack-title:after { content:'-'; padding:0 5px; float:left; }
 .commentarea > .usertext { clear:left; margin:0; }
@@ -238,16 +235,16 @@ body.res-nightmode .link.last-clicked { border-color: #666; }
 .usertext-edit textarea { width:430px; padding:10px; }
 .usertext .bottom-area { width:450px; }
 .comment .usertext .bottom-area { width:100%; }
-.usertext button { margin:5px 5px 10px 0; border:none; min-width:70px; }
+.usertext button { margin:5px 5px 10px 0; border:none; min-width:70px; background-color:#9561A8; }
 body.res-nightmode .usertext .help-toggle { background-color:#DDD; }
 .usertext .help-toggle a { color:#FFF; }
 body.res-nightmode .usertext .help-toggle a { color:#444 !important; }
 .usertext table.markhelp { width:450px; font-size:11px; }
-.link .usertext .md { background-color:#FFF; border:1px solid #EAEAEA; }
+.link .usertext .md { border:1px solid #E8C3FA; }
 .entry .buttons li a { font-family:verdana, arial, sans-serif; }
 
 .usertext .help-toggle, .res-nightmode button.RESBigEditorPop, .usertext .bottom-area .reddiquette {
-    background-color:#999;
+    background-color:#A76BC2;
     border:none;
     color:#FFF;
     padding:6px;
@@ -337,9 +334,9 @@ body.res-nightmode .md table { border-color: #666; }
 .md table * { border: 0; }
 body.res-nightmode .md table * { color: #ddd; }
 .md table th { text-align: center; }
-.md table tr:nth-child(even), .md table thead { background-color: #f6f6f6; }
+.md table tr:nth-child(even), .md table thead { background-color: #C9AAD0; }
 body.res-nightmode .md table tr:nth-child(even), body.res-nightmode .md table thead { background-color: #444; }
-.md table td, .md table th { border-right: 1px solid #ccc; padding: 4px 8px; }
+.md table td, .md table th { border-right: 1px solid #C9AAD0; padding: 4px 8px; }
 body.res-nightmode .md table td, body.res-nightmode .md table th { border-color: #666; }
 body:not(.res-nightmode) .md table tbody { color: #444; }
 
@@ -463,7 +460,7 @@ body.res-nightmode .md h6 + ul li:nth-child(odd), body.res-nightmode .md h6 + ol
 
 /* buttons */
 .btn, button, .side a[href*='/#btn'] {
-    background-color:#449EF8;
+    background-color:#9561A8;
     border:none;
     color:#FFF;
     padding:6px;
@@ -492,7 +489,7 @@ body.res-nightmode .btn, body.res-nightmode button,
 body.res-nightmode .side a[href*='/#btn'] { color: #444 !important; background-color: #CCC !important; }
 .btn a { color:#FFF; }
 body.res-nightmode .btn a { color: #444 !important; }
-.btn:hover,button:hover,.side a[href*='/#btn']:hover { background-color:#56a6f7; border-color:#56a6f7; }
+.btn:hover,button:hover,.side a[href*='/#btn']:hover { background-color:#DBA3F7; border-color:#DBA3F7; }
 body.res-nightmode .btn:hover, body.res-nightmode button:hover,
 body.res-nightmode .side a[href*='/#btn']:hover { background-color:#DDD !important; border-color:#DDD; }
 
@@ -635,13 +632,14 @@ margin-bottom: -2px;
 
 div.over18 .entry .buttons .first{padding-left: 0px}
 .footer-parent
+
 {
  height:300px;
  padding-bottom:250px;
  clear:both;
  text-align:center;
  width:100%;
- background-image:url(%%rdfooter%%);
+ background-image:url(%%twifooter%%);
  background-repeat:no-repeat;
  margin-bottom:-30px;
  background-position: 50% 100%;
@@ -649,16 +647,9 @@ div.over18 .entry .buttons .first{padding-left: 0px}
 
 
 body {
-    background: url('%%rdbg%%') no-repeat fixed center bottom !important;
-    background-color:#ffffff !important;
+    background: url('%%twibg%%') no-repeat fixed right bottom !important;
+    background-color: #F2E6F7 !important;
 } 
-
-#header #header-bottom-left {
-   background: url(%%rdheader%%) !important;
-   background-repeat: no-repeat !important;
-   background-position: 50% 100% !important;
-   height: 216px; 
-}
 
 .content #siteTable div[onclick="click_thing(this)"] {background-color: transparent!important;}
 body.res-nightmode:first-of-type > .content {background-color: transparent!important;}
@@ -670,7 +661,7 @@ body.res-nightmode:first-of-type {
     background-color: #222!important;
 }
 
-body.res-nightmode form.flairtoggle, body.res-nightmode .trophy-area .content, .side .spacer h1, body.res-nightmode .NERPageMarker, body.res-nightmode .side .spacer {background-color: transparent!important;}
+body.res-nightmode form.flairtoggle, body.res-nightmode .trophy-area .content, .side .spacer h1, body.res-nightmode .NERPageMarker, body.res-nightmode .side .spacer {background-color: #EAE8ED !important;}
 
 .res-nightmode .content .flair {
 background-color: transparent !important
@@ -1006,16 +997,39 @@ position: static
 /*this code positions the sticky*/
 position:absolute;
 display: block;
-top:236px;
+top:216px;
 left:40px;
 /*this code styles the sticky*/
 background-color: #F2F2F2;
-color: #555555;
+color: #22093F;
 text-align: left;
 margin: 15px;
 border-radius: 8px;
 width: 50%;
 padding: 7px 0px 7px 40px;
+}
+
+/*__________Header With Link_________*/
+#header {
+    height: 224px;
+}
+.pagename a {
+    text-indent: -99em;
+    position: absolute;
+    top: 19px;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background: #F2E6F7 url(%%padheader%%) 50% 0;
+}
+#header-img,
+#header .tabmenu {
+    position: absolute;
+    bottom: 0;
+    z-index: 1;
+}
+#header .tabmenu {
+    left: 140px;
 }
 
 /*__________Nickname script___________*/
@@ -1044,3 +1058,23 @@ a.author[href$=MyNameIsNavy]:before {
     font-size: 12px;
 
 }
+
+a.author[href$="Drawlestia"]:after{content:" - Created the Header!"}
+
+/*greentext*/
+.md blockquote {
+    border: 0;
+    margin: 0;
+    color: #789922;
+    display: block;
+    line-height: 0.8
+    }
+
+.md blockquote p:before {
+    content: ">";
+    float: left;
+    display: block;
+    }
+
+/*byebyedownvotes*/
+/*.link .down { display: none; }*/
