Stylesheet/emote/tag updates 2014-09-29

--- a/source-css/applefritter.css
+++ b/source-css/applefritter.css
@@ -278,7 +278,7 @@ a[href|="/sp"] {
 
 /*** Emotes ***/
 
-a[href|="/fritapple"], a[href|="/fritsmirk"], a[href|="/fritgrin"], a[href|="/fritshrug"], a[href|="/fritbow"], a[href|="/frithmph"], a[href|="/fritnoway"], a[href|="/fritsmeel"], a[href|="/fritsad"], a[href|="/fritsmile"], a[href|="/frithappy"], a[href|="/fritbbbff"], a[href|="/fritwhat"], a[href|="/frityay"], a[href|="/fritter"], a[href|="/fritlie"], a[href|="/fritmad"], a[href|="/fritderp"], a[href|="/frithoof"], a[href|="/fritspet"], a[href|="/fritbake"], a[href|="/fritblush"], a[href|="/fritjoke"] {
+a[href|="/fritapple"], a[href|="/fritsmirk"], a[href|="/fritgrin"], a[href|="/fritshrug"], a[href|="/fritbow"], a[href|="/frithmph"], a[href|="/fritnoway"], a[href|="/fritsmeel"], a[href|="/fritsad"], a[href|="/fritsmile"], a[href|="/frithappy"], a[href|="/fritbbbff"], a[href|="/fritwhat"], a[href|="/frityay"], a[href|="/fritter"], a[href|="/fritlie"], a[href|="/fritmad"], a[href|="/fritderp"], a[href|="/frithoof"], a[href|="/fritspet"], a[href|="/fritbake"], a[href|="/fritblush"], a[href|="/fritjoke"], a[href|="/fritsalute"], a[href|="/frithmmm"] {
     display: block;
     clear: none;
     float: left;
@@ -287,7 +287,7 @@ a[href|="/fritapple"], a[href|="/fritsmirk"], a[href|="/fritgrin"], a[href|="/fr
     background-image: url(%%fritemotes%%) !important;
 }
 
-a[href|="/rfritapple"], a[href|="/rfritsmirk"], a[href|="/rfritgrin"], a[href|="/rfritshrug"], a[href|="/rfritbow"], a[href|="/rfrithmph"], a[href|="/rfritnoway"], a[href|="/rfritsmeel"], a[href|="/rfritsad"], a[href|="/rfritsmile"], a[href|="/rfrithappy"], a[href|="/rfritbbbff"], a[href|="/rfritwhat"], a[href|="/rfrityay"], a[href|="/rfritter"], a[href|="/rfritlie"], a[href|="/rfritmad"], a[href|="/rfritderp"], a[href|="/rfrithoof"], a[href|="/rfritspet"], a[href|="/rfritbake"], a[href|="/rfritblush"], a[href|="/rfritjoke"] {
+a[href|="/rfritapple"], a[href|="/rfritsmirk"], a[href|="/rfritgrin"], a[href|="/rfritshrug"], a[href|="/rfritbow"], a[href|="/rfrithmph"], a[href|="/rfritnoway"], a[href|="/rfritsmeel"], a[href|="/rfritsad"], a[href|="/rfritsmile"], a[href|="/rfrithappy"], a[href|="/rfritbbbff"], a[href|="/rfritwhat"], a[href|="/rfrityay"], a[href|="/rfritter"], a[href|="/rfritlie"], a[href|="/rfritmad"], a[href|="/rfritderp"], a[href|="/rfrithoof"], a[href|="/rfritspet"], a[href|="/rfritbake"], a[href|="/rfritblush"], a[href|="/rfritjoke"], a[href|="/rfritsalute"], a[href|="/rfrithmmm"] {
     display: block;
     clear: none;
     float: left;
@@ -324,6 +324,8 @@ a[href|="/fritspet"], a[href|="/rfritspet"] { background-position: -210px -280px
 a[href|="/fritbake"], a[href|="/rfritbake"] { background-position: -0px -350px; }
 a[href|="/fritblush"], a[href|="/rfritblush"] { background-position: -70px -350px; }
 a[href|="/fritjoke"], a[href|="/rfritjoke"] { background-position: -140px -350px; }
+a[href|="/fritsalute"], a[href|="/rfritsalute"] { background-position: -210px -350px; }
+a[href|="/frithmmm"], a[href|="/rfrithmmm"] { background-position: -0px -420px; }
 
 a[href|="/fritnya"], a[href|="/fritteehee"] {
     display: block;
