--- a/source-css/equestriagirls.css
+++ b/source-css/equestriagirls.css
@@ -251,6 +251,10 @@ div#header-bottom-left {
     background-color:white;
 }
 
+.stickied.link {
+background-color:white;
+}
+
 .entry .buttons li a {
     font-family:Helvetica,Arial,sans-serif;
     height:15px;
