--- a/source-css/mlplounge.css
+++ b/source-css/mlplounge.css
@@ -1,8 +1,8 @@
 div.titlebox span.word {display:none}
 
-div.titlebox .subscribers span.number:after {content:" Ninjas and Shinobi "}
+div.titlebox .subscribers span.number:after {content:" Sillies and Numpties "}
 div.titlebox .subscribers span.number:after {font-size:12px!important; }
-div.titlebox p.users-online span.number:after { content: " sneaking around" }
+div.titlebox p.users-online span.number:after { content: " having FUN!" }
 div.titlebox p.users-online span.word { display: none }
 
 
@@ -1335,7 +1335,7 @@ a.author[href$="MLP_William"] {font-size:0!important; overflow:hidden; display:i
 a.author[href$="MLP_William"]:before {font-size:10px!important; visibility:visible!important; content: "MLP_WiII_i_am"}
 
 a.author[href$="HeWho_MustNotBeNamed"] {font-size:0!important; overflow:hidden; display:inline-block; content: "";}
-a.author[href$="HeWho_MustNotBeNamed"]:before {font-size:10px!important; visibility:visible!important; content: "HeWho_MustLoveFluttershy"}
+a.author[href$="HeWho_MustNotBeNamed"]:before {font-size:10px!important; visibility:visible!important; content: "ErDer_HastNamenNicht"}
 
 a.author[href$="DaylightDarkle"] {font-size:0!important; overflow:hidden; display:inline-block; content: "";}
 a.author[href$="DaylightDarkle"]:before {font-size:10px!important; visibility:visible!important; content: "Pylo"}
@@ -1344,19 +1344,16 @@ a.author[href$="DaylightDarkle"]:before {font-size:10px!important; visibility:vi
 .sidecontentbox a.author[href$="DoomedCivilian"] {color: #ff23ff}
 
 a.author[href$="Peacefulzealot"] {font-size:0!important; overflow:hidden; display:inline-block; content: "";}
-a.author[href$="Peacefulzealot"]:before {font-size:10px!important; visibility:visible!important; content: "Zealy-kun"}
+a.author[href$="Peacefulzealot"]:before {font-size:10px!important; visibility:visible!important; content: "CenturyZellyBelly"}
 
 a.author[href$="ZephyrC"] {font-size:0!important; overflow:hidden; display:inline-block; content: "";}
 a.author[href$="ZephyrC"]:before {font-size:10px!important; visibility:visible!important; content: "ZephyrC is missing"}
-
-a.author[href$="Tenth-Gear"] {font-size:0!important; overflow:hidden; display:inline-block; content: "";}
-a.author[href$="Tenth-Gear"]:before {font-size:10px!important; visibility:visible!important; content: "Tenth-Gear the Court Jester"}
 
 a.author[href$="deathdude223"] {font-size:0!important; overflow:hidden; display:inline-block; content: "";}
 a.author[href$="deathdude223"]:before {font-size:10px!important; visibility:visible!important; content: "deathdude222"} 
 
 a.author[href$="DoctorBoson"] {font-size:0!important; overflow:hidden; display:inline-block; content: "";}
-a.author[href$="DoctorBoson"]:before {font-size:10px!important; visibility:visible!important; content: "DOCTOR FEELGOOD"} 
+a.author[href$="DoctorBoson"]:before {font-size:10px!important; visibility:visible!important; content: "DucktorBoson"} 
 
 a.author[href$="TwoWorldsCoexisting"] {font-size:0!important; overflow:hidden; display:inline-block; content: "";}
 a.author[href$="TwoWorldsCoexisting"]:before {font-size:10px!important; visibility:visible!important; content: "TwoDogesCoexisting"}
