--- a/source-css/mylittleicons.css
+++ b/source-css/mylittleicons.css
@@ -366,6 +366,14 @@ a[href|="/topkek"], a[href|="/i33"] {
         height: 182px;
         background-image: url(%%topkek%%)
         }
+a[href|="/shodan"], a[href|="/i34"] {
+        display: block;
+        clear: none;
+        float: left;
+        width: 190px;
+        height: 190px;
+        background-image: url(%%shodan%%)
+        }
     /**********************
     *
     *    OTHER EMOTE STUFF
