--- a/source-css/zponymotes.css
+++ b/source-css/zponymotes.css
@@ -1,3 +1,13 @@
+a[href^="/easemyscoots"] {
+    background-position: 0px 0px;
+    display: block;
+    clear: none;
+    float: left;
+    width: 105px;
+    height: 105px;
+    background-image: url(%%easemyscoots%%)
+    }
+
 a[href^="/rdbreath"] {
     background-position: 0px 0px;
     display: block;
