--- a/source-css/mlpdrawingschool.css
+++ b/source-css/mlpdrawingschool.css
@@ -3,7 +3,7 @@
 To move it from the side to the middle change Background-position: bottom right; to Background-position: center center;*/
 
 body {
-   background-image: url(%%background%%);
+   background-image: url(%%bg%%);
    background-repeat: no-repeat;
    background-position: Center Center;
    background-attachment:fixed;
