--- a/source-css/spanishmeerkat.css
+++ b/source-css/spanishmeerkat.css
@@ -442,6 +442,11 @@ margin: -1px 0;
     background-color:#222!important;
 }
 
+span.score {
+font-weight: bold;
+color: #FFFFFF;
+}
+
 /*Changes color of text posts*/
 
 .link .usertext .md {
@@ -948,7 +953,7 @@ a[href|="/pinkieistiredofyourshit"] {width:150px;height:149px;background-positio
 
 /* Normal Spritesheet 3 */
 
-a[href|="/rainbowderp"], a[href|="/maudfun"], a[href|="/applegasm"], a[href|="/zecorawooo"], a[href|="/navydash"], a[href|="/navymeerkat"], a[href|="/surpriseddash"], a[href|="/rainbowyeah"], a[href|="/pinkietongue"], a[href|="/ionlywatchitfortheplot"]
+a[href|="/rainbowderp"], a[href|="/maudfun"], a[href|="/applegasm"], a[href|="/zecorawooo"], a[href|="/navydash"], a[href|="/navymeerkat"], a[href|="/surpriseddash"], a[href|="/rainbowyeah"], a[href|="/pinkietongue"], a[href|="/ionlywatchitfortheplot"], a[href|="/bedroomeyes"], a[href|="/chryssismile"]
 {background-image:url(%%normal-spritesheet3%%);display:block;float:left;}
 
 a[href|="/rainbowderp"] {width:131px;height:150px;}
@@ -959,6 +964,7 @@ a[href|="/navydash"], a[href|="/navymeerkat"] {width:124px;height:200px;backgrou
 a[href|="/surpriseddash"], a[href|="/rainbowyeah"] {width:155px;height:200px;background-position: -412px -150px;}
 a[href|="/pinkietongue"] {width:116px;height:150px;background-position: -361px 0;}
 a[href|="/ionlywatchitfortheplot"] {width:126px;height:150px;background-position: -477px 0;}
+a[href|="/bedroomeyes"], a[href|="/chryssismile"] {width:206px;height:150px;background-position: -603px 0;}
 
 /* End of Normal Spritesheet 3 */
 
@@ -989,7 +995,5 @@ a[href|="/ajuberpout"] {width:121px;height:160px;background-position: -242px -16
 
 
 /* Single Emotes */
-
-
 
 /* End of Single Emotes */
