--- a/source-css/taviquisition.css
+++ b/source-css/taviquisition.css
@@ -2179,3 +2179,24 @@ a[href|="/tavithanos"] {
  background-image: url(%%spritesheetThanos%%);
  background-position: -0px -400px;
 } 
+
+a[href|="/octaajhug"] {  
+ display: block;
+ clear: none;
+ float: left; 
+ width: 220px;
+ height: 150px;
+ background-image: url(%%spritesheet14%%);
+ background-position: -0px -1200px;  
+} 
+ 
+a[href|="/octapinkiehug"] {  
+ display: block;
+ clear: none;
+ float: left; 
+ width: 220px;
+ height: 150px;
+ background-image: url(%%spritesheet14%%);
+ background-position: -0px -1350px;  
+} 
+ 
